[package]
name = "rollman-elo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
chrono = "0.4.39"
color-eyre = "0.6.3"
ordered-float = "4.6.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
ureq = { version = "3.0.4", features = ["json"] }
